# raven

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CONTEXT.md  Cargo.toml  NOTICE  README.md  bunfig.toml  compose_attack.py  compose_attack_final.py  oos.r  package-lock.json  rust-toolchain.toml  rustfmt.toml  setup.sh  test_function_params.R  test_loop_iterator.R  test_word_sep.r  verify_loop_detection.py
.claude/: settings.local.json
crates/raven/: Cargo.toml
crates/raven/benches/: artifact_compute.rs  cross_file.rs  edit_to_publish.rs  libpath_capture.rs  lsp_operations.rs  package_cache_and_fanout.rs  startup.rs
crates/raven/data/: names-db-seed.db
crates/raven/examples/: parse_test.rs  profile_diagnostics.rs  profile_real_workspace.rs  profile_worldwide.rs
crates/raven/proptest-regressions/: completion_context.txt  content_provider.txt  document_store.txt  file_path_intellisense.txt  handlers.txt  state_tests.txt
crates/raven/proptest-regressions/cross_file/: property_tests.txt  scope.txt
crates/raven/proptest-regressions/indentation/: context.txt
crates/raven/src/: backend.rs  chunks.rs  completion_context.rs  content_provider.rs  diagnostic_code.rs  document_store.rs  extract_op.rs  file_path_intellisense.rs  file_type.rs  foreach.rs  handlers.rs  help.rs  jags_builtins.rs  lib.rs  libpath_watcher.rs  main.rs  namespace_completion.rs  namespace_parser.rs  nse.rs  package_library.rs  package_namespace.rs  package_state.rs  parameter_resolver.rs  parser_pool.rs  perf.rs  qualified_resolve.rs  r_env.rs  r_names.rs  r_subprocess.rs  reserved_words.rs  roxygen.rs  stan_builtins.rs  state.rs  state_tests.rs  utf16.rs  workspace_index.rs
crates/raven/src/cli/: analysis_stats.rs  check.rs  lint.rs  mod.rs  packages.rs  shared.rs
crates/raven/src/config_file/: discovery.rs  discovery_load.rs  lintr_loader.rs  merge.rs  mod.rs  overrides.rs  toml_loader.rs
crates/raven/src/cross_file/: background_indexer.rs  cache.rs  config.rs  content_provider.rs  dependency.rs  directive.rs  file_cache.rs  integration_tests.rs  mod.rs  parent_resolve.rs  path_resolve.rs  property_tests.rs  revalidation.rs  scope.rs  scope_snapshot.rs  source_detect.rs  standalone_cache.rs  types.rs  workspace_index.rs
crates/raven/src/help/: cache.rs  html.rs  mod.rs  rd_to_html.R  rewrite.rs  sanitize.rs  text.rs  types.rs  validate.rs
crates/raven/src/indentation/: calculator.rs  context.rs  formatter.rs  mod.rs
crates/raven/src/linting/: config.rs  mod.rs  nolint.rs  parse_gate.rs  rule_ids.rs
crates/raven/src/linting/rules/: assignment_operator.rs  commas.rs  commented_code.rs  condition_assignment.rs  equals_na.rs  function_left_parentheses.rs  indentation.rs  infix_spaces.rs  line_length.rs  mixed_logical.rs  mod.rs  no_tab.rs  object_length.rs  object_name.rs  quotes.rs  semicolon.rs  spaces_inside.rs  t_and_f_symbol.rs  trailing_blank_lines.rs  trailing_whitespace.rs  vector_logic.rs
crates/raven/src/package_db/: base_exports.rs  binary_db.rs  embedded_base.rs  embedded_base_generated.rs  json_db.rs  merge.rs  mod.rs  model.rs  renv_lock.rs  runiverse.rs
crates/raven/src/package_state/: derive.rs  digest.rs  event.rs  mod.rs  parity_tests.rs  proptest_machine.rs  rprofile.rs  sysdata.rs
crates/raven/src/test_utils/: alloc_counter.rs  fixture_workspace.rs  mod.rs  standalone_hub.rs
crates/raven/tests/: check_footer_stream.rs  cli_banner.rs  cross_file_nse_regression.rs  indentation_integration.rs  libpath_watching.rs  package_corpus.rs  package_db_consumer.rs  performance_budgets.rs  suppression_per_code.rs  system_file_source.rs
crates/raven/tests/fixtures/package_corpus/: accepted_real_diagnostics.toml  known_false_positives.toml
crates/raven/tests/fixtures/package_db/runiverse/: dplyr.json  ggplot2.json
crates/raven/tests/fixtures/sysdata_pkg/R/: sysdata.rda
demo/: README.md  data-viewer-smoke.R  scratch.do
docs/: chunks.md  cli.md  coexistence.md  comparison.md  completion.md  configuration.md  cross-file-analysis-performance.md  cross-file-performance.md  cross-file.md  data-viewer.md  declaration-directives.md  development.md  diagnostics.md  directives.md  document-outline.md  document-symbols-spec.md  editor-integrations.md  find-references.md  go-to-definition.md  help-viewer.md  hover.md  indentation.md  keybinding-comparison.md  knit.md  limitations.md  linting.md  non-standard-evaluation.md  package-corpus-checkpoint.md  package-database.md  packages.md  plot-viewer.md  r-console.md  r-package-dev.md  rprofile.md  send-to-r.md  settings-reference.md  snippets.md  syntax-highlighting.md  syntax_highlighting.md
scripts/: build-names-db.sh  bump-version.sh  profile_simple.py  profile_startup.py  setup.sh
specs/: issue-472-spec.md  issue-473-spec.md  issue-476-spec.md  issue-479-spec.md  (+2 more)
subdir/: child.r
(+677 files in other folders)
