[package]
name = "raven"
version.workspace = true
description = "Static R Language Server with workspace symbol indexing"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository = "https://github.com/jbearak/Raven"

[[bin]]
name = "raven"
path = "src/main.rs"

[dependencies]
ammonia = "4"
blake3 = "1"
anyhow = "1.0.80"
async-trait = "0.1"
log = "0.4.17"
env_logger = "0.11"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = { version = "1.0.94", features = ["preserve_order"] }
tokio = { version = "1.26.0", features = ["full"] }
tokio-util = "0.7"
tower = "0.4"
tower-lsp.workspace = true
tree-sitter = "0.24.7"
tree-sitter-r = { git = "https://github.com/r-lib/tree-sitter-r", rev = "95aff097aa927a66bb357f715b58cde821be8867" }
url = "2.4.1"
walkdir = "2"
dashmap = "5.4.0"
indexmap = "2.2"
regex = "1.10.0"
rayon = "1.10"
ropey = "1.6"
streaming-iterator = "0.1"
lru = "0.16"
notify = { version = "6.1", default-features = false, features = ["macos_fsevent"] }
percent-encoding = "2"
tempfile = "3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
xdg = "2.5.2"

[features]
# Expose test_utils for integration tests and benchmarks (kept out of production builds)
test-support = []

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
proptest = "1.4"
tokio = { version = "1.26.0", features = ["test-util"] }

[[bench]]
name = "startup"
harness = false
required-features = ["test-support"]

[[bench]]
name = "lsp_operations"
harness = false
required-features = ["test-support"]

[[bench]]
name = "cross_file"
harness = false
required-features = ["test-support"]

[[bench]]
name = "libpath_capture"
harness = false
required-features = ["test-support"]

[[bench]]
name = "edit_to_publish"
harness = false
required-features = ["test-support"]

[[example]]
name = "profile_diagnostics"
required-features = ["test-support"]

[[example]]
name = "profile_real_workspace"
required-features = ["test-support"]

[[example]]
name = "profile_worldwide"
required-features = ["test-support"]
